--- a/package.json
+++ b/package.json
@@ -34,14 +34,21 @@
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-jsx-a11y": "^6.7.1",
         "eslint-plugin-react": "^7.32.2",
+        "husky": "^8.0.3",
         "jest": "^29.2.1",
         "metro-react-native-babel-preset": "0.73.9",
         "prettier": "^2.8.8",
+        "pretty-quick": "^3.1.3",
         "react-native-svg-transformer": "^1.0.0",
         "react-test-renderer": "18.2.0",
         "typescript": "4.8.4"
     },
     "jest": {
         "preset": "react-native"
+    },
+    "husky": {
+        "hooks": {
+        "pre-commit": "pretty-quick --staged && npm run lint"
+        }
     }
 }
